<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/iso_country_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country_iso"
            android:inputType="text"
            android:paddingTop="16dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/numeric_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/numeric"
            android:inputType="number"
            android:paddingTop="16dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/operator_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/operator"
            android:inputType="text"
            android:paddingTop="16dp"
            android:importantForAutofill="no" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <Button
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/save" />

            <Button
                android:id="@+id/button_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/reset" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>